k8s/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: camp-travel
spec:
  replicas: 1
  selector: { matchLabels: { app: backend } }
  template:
    metadata: { labels: { app: backend } }
    spec:
      serviceAccountName: jenkins-deployer
      containers:
      - name: backend
        image: 338320348680.dkr.ecr.ap-south-1.amazonaws.com/camp-travel-backend:latest
        ports: [{ containerPort: 5000 }]
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: camp-travel
spec:
  selector: { app: backend }
  ports:
  - port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
