k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: camp-travel
spec:
  replicas: 1
  selector: { matchLabels: { app: frontend } }
  template:
    metadata: { labels: { app: frontend } }
    spec:
      serviceAccountName: jenkins-deployer
      containers:
      - name: frontend
        image: 338320348680.dkr.ecr.ap-south-1.amazonaws.com/camp-travel-frontend:latest
        ports: [{ containerPort: 80 }]
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: camp-travel
spec:
  selector: { app: frontend }
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  type: LoadBalancer
